--- a/public/css/frontend/responsive.css
+++ b/public/css/frontend/responsive.css
@@ -24,16 +24,9 @@
 
 /* All Mobile Sizes (devices and browser) */
 @media only screen and (max-width:767px) {
-.container {
-	width: 100%;
-}
-
-body.toggle-overflow{
-	overflow: hidden;
-}
-header + section {
-  padding-top: 0;
-}
+.container { width: 100%; }
+body.toggle-overflow{ overflow: hidden; }
+header + section { padding-top: 25px !important; }
 .nav-toggle {
   border-bottom: 1px solid #902dbe;
   clear: both;
@@ -327,16 +320,15 @@ footer.footer-wrapper { text-align: center; }
 .main-container.dashdb .row, 
 .userdashboard .dashboard-content .row { margin-left: inherit; margin-right: inherit; }
 .cd-main-content .page-container [ class*="col" ]{ width: 100%; float: none; padding: 0 10px; }
-.oversea-user-profile-root{ height: auto; }
+.oversea-user-profile-root{ display: inline-block; height: auto; }
 .oversea-user-profile-root .mui-avatar-a, 
 .oversea-user-profile-root .mui-avatar{ width: 43px; height: 43px; }
 .oversea-user-profile-root .mui-personal-info .mui-user-name{ left: -17px; top: 44px; }
+.oversea-user-profile-root .mui-personal-info .mui-col-normal{ margin-bottom: 0; text-align: center;}
 .oversea-user-profile-root .mui-personal-info div.mui-basic-info {
-  margin-bottom: 10px;
-  margin-left: 43px;
+  margin-left: 0;
   margin-right: 0;
   padding: 0;
-  text-align: center;
   width: 100%;
 }
 .oversea-user-profile-root .mui-personal-info div.mui-favorite {
@@ -344,6 +336,11 @@ footer.footer-wrapper { text-align: center; }
   margin-right: 0;
   text-align: center;
   width: 100%;
+}
+.oversea-user-profile-root .mui-personal-info div.mui-accu-voilations{ 
+  float: none; 
+  margin-right: 0; 
+  text-align: center; 
 }
 
 }
