--- a/public/css/dashboard/userdash.css
+++ b/public/css/dashboard/userdash.css
@@ -40,6 +40,10 @@ input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration {
   display: none;
 }
+input[type="radio"]:checked + label span::before {
+  left: 4px;
+  top: 4px;
+}
 
 /* -------------------------------- 
 
