--- a/public/css/dashboard/userdash.css
+++ b/public/css/dashboard/userdash.css
@@ -41,8 +41,9 @@ input[type="search"]::-webkit-search-results-decoration {
   display: none;
 }
 input[type="radio"]:checked + label span::before {
-  left: 4px;
-  top: 4px;
+  font-size: 0.6em;
+  left: 0.5em;
+  top: 0.3em;
 }
 
 /* -------------------------------- 
